--- a/Animaniacs/src/main/AndroidManifest.xml
+++ b/Animaniacs/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true">
+
         <activity
             android:name=".Activities.MainActivity"
             android:label="@string/app_name" >
@@ -30,12 +32,22 @@
         <activity
             android:name=".Activities.LineChartActivity"
             android:label="@string/app_name" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+
+        <activity
+            android:name=".Activities.SearchActivity"
+            android:label="Search Activity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
